--- a/index.html
+++ b/index.html
@@ -5,19 +5,36 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="/img/googleg_standard_color_128dp.png" />
   <title>Google</title>
 </head>
 
 <body>
-  <div>
-    <a href="">About</a>
-    <a href="">Store</a>
-    <a href="">Gmail</a>
-    <a href="">Images</a>
+  <div class="box-container">
+
+    <div class="header">
+      <a href="" style="text-decoration: none;">About</a>
+      <a href="">Store</a>
+      <div>
+        <a href="">Gmail</a>
+        <a href="">Images</a>
+        <img src="img/dots-grid.png" alt="dots-grid">
+        <button>Sign in</button>
+      </div>
+    </div>
+
+    <div><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+        alt="Google Logo"></div>
+
+    <div>
+      <form action="/search" method="get"></form>
+    </div>
+
     <div></div>
+    
     <div></div>
-    <div></div>
-    <div></div>
+  </div>
 </body>
 
 </html>
