nav bar completed

--- a/index.html
+++ b/index.html
@@ -7,33 +7,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="/img/googleg_standard_color_128dp.png" />
+  <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
   <title>Google</title>
 </head>
 
 <body>
-  <div class="box-container">
-
-    <div class="header">
-      <a href="" style="text-decoration: none;">About</a>
+  <div class="flex-container">
+    <nav>
+    <div class="nav-left">
+      <a href="">About</a>
       <a href="">Store</a>
+    </div>
       <div>
+      <div class="nav-right">
         <a href="">Gmail</a>
         <a href="">Images</a>
-        <img src="img/dots-grid.png" alt="dots-grid">
-        <button>Sign in</button>
+        <a class="nav-link-round" href=""><button class="button-apps"></button></a>
+        <button class="button-sign">Sign in</button>
       </div>
     </div>
-
-    <div><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
-        alt="Google Logo"></div>
-
-    <div>
-      <form action="/search" method="get"></form>
-    </div>
-
-    <div></div>
+    </nav>
     
-    <div></div>
+
+    <!-- <div><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo"></div>-->
+        
+
   </div>
 </body>
 
